# RAG_001

./: .env  .gitignore  API.md  LICENCE  README.md  debug_llm_factory.py  debug_template_parser.py  dev-stop.sh  dev.sh  main.py  project_workflow.md  pyproject.toml  reproduce_gemini_retry.py  requirements.txt  verify_import.py
SRC/: ..env.example.swp  .env.example  .python-version  main.py  pyproject.toml  requirements.txt  verify.py
SRC/Assets/Database/qdrant_DB/: meta.json
SRC/Assets/Database/qdrant_DB/collection/collection_1/: storage.sqlite
SRC/Assets/Files/: .gitignore
SRC/Assets/Files/1/: 06j7vfwchkxz_test.txt  1gco4lkp4glt_GraduationProject.txt  yrg2cru9aovb_خالدابنالوليدcopy.txt  yu5r7a7oryim_خالدابنالوليدcopy.txt  zibnmaxj3v75_خالدابنالوليد.txt
SRC/Controllers/: BaseController.py  DataController.py  NLPController.py  PrescriptionController.py  ProcessController.py  ProjectController.py  ScrapingController.py  __init__.py
SRC/Helpers/: Config.py
SRC/Models/: Asset_Model.py  Base_DataModel.py  Chunk_Model.py  Project_Model.py  __init__.py
SRC/Models/DB_Schemes/: __init__.py
SRC/Models/DB_Schemes/minirag/: README.md
SRC/Models/DB_Schemes/minirag/Schemes/: Asset.py  Data_Chunk.py  Project.py  __init__.py  minirag_base.py
SRC/Models/DB_Schemes/minirag/alembic/: env.py
SRC/Models/enums/: AssetTypeEnum.py  DataBaseEnum.py  ProcessingEnum.py  ResponsEnums.py
SRC/Routes/: Base.py  Data.py  NLP.py  Prescription.py
SRC/Routes/Schemes/: Date_Schemes.py  NLP_Schemes.py
SRC/Stores/LLM/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
SRC/Stores/LLM/Providers/: Cohere_provider.py  Gemini_provider.py  HuggingFace_provider.py  Huggingface_provider.py  Huggingface_provider.py.bak  Ollama_provider.py  OpenAI_provider.py  __init__.py
SRC/Stores/LLM/Templates/: template_parser.py
SRC/Stores/LLM/Templates/Locales/en/: prescription_rag.py  (+1 more)
SRC/Stores/Sparse/: BM25Index.py
SRC/Stores/VectorDB/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py
SRC/Stores/VectorDB/Providers/: PGVectorProvider.py  QdrantDBProvider.py  __init__.py
SRC/Utils/: ContentFilter.py  metrics.py
SRC/scripts/: process_embeddings.py
src/: main.py  pyproject.toml  requirements.txt
(+123 files in other folders)
